Update to NzbHydra 3.14.0 & OpenJDK 11
Signed-off-by: Joe Groocock <me@frebib.net>